# mdna

./: .gitignore  .gitmodules  4  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  MENIFEST.in  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  setup.py
api/: index.html
api/analysis/: index.html
api/functions/: index.html
api/geometry-reference/: geometry-reference.md  index.html
api/minimizer/: index.html
api/nucleic/: index.html
api/nucleic-reference/: index.html
api/reference/: index.html
api/shapes/: index.html
api/shapes-reference/: index.html
concepts/rigid-base/: index.html
docs/: code-reference.md  explanation.md  index-api.md  index-notebooks.md  index.md  modules-analyse.md  modules-build.md  modules-modify.md  nucleic-reference.md  reference.md  tutorials-analyse.md  tutorials-build.md  tutorials-quickstart.md
docs/api/: analysis.md  functions.md  generators.md  geometry-reference.md  geometry.md  index.md  minimizer.md  nucleic-reference.md  nucleic.md  reference.md  shapes-reference.md  shapes.md  spline.md
docs/concepts/: architecture.md  minimization.md  rigid-base.md  splines.md
docs/explanation/: explanation.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: analyzing.md  building.md  modifying.md  noncanonical.md  overview.md
docs/modules/: modules-core.md  modules.md
docs/notebooks/: 0_structure_tutorial.ipynb  1_visualization_tutorial.ipynb  2_modification_tutorial.ipynb  3_analysis_tutorial.ipynb  4_filament_tutorial.ipynb  5_extension_tutorial.ipynb  6_connection_tutorial.ipynb  7_sequence_library.ipynb
docs/tutorials/: tutorials-introduction.md  tutorials-modify.md
docs_old/: conf.py  index.rst  pymdna.rst
example/: demo.ipynb
examples/: 0_structure_tutorial.ipynb  1_visualization_tutorial.ipynb  2_modification_tutorial.ipynb  3_analysis_tutorial.ipynb  4_filament_tutorial.ipynb  5_extension_tutorial.ipynb  6_connection_tutorial.ipynb  7_sequence_library.ipynb
examples/0_demo/: analysis.ipynb  build.ipynb  demo.ipynb  draw.ipynb  modify.ipynb  output_GCGA.csv  output_GGGGGGGG.csv
examples/biomolsim/: generate_sequence.ipynb
examples/data/: filament.py  my_dna.h5  output_my_dna.csv
examples/demo/: demo copy 2.ipynb  demo.ipynb
examples/equilibrate/: test.ipynb
examples/extend/: extend.ipynb  guess_middle.ipynb
examples/methylation/: methly.ipynb
examples/non_canonical/: mutate.ipynb  recipe_for_T1C.ipynb
examples/pdbs/: BDNA_CM.h5
examples/tests/: debug_parameter_calculation.ipynb  params_with_quaternions.ipynb  rigid_base_with_quaternions.ipynb  test_rigid_base.ipynb  test_rigid_base_quaternion.ipynb
examples_no/: 2_modification_tutorial.ipynb  7_sequence_library.ipynb
examples_old/2_sequence_library/: 1_showcase_DNA_modifications copy.ipynb  1_showcase_DNA_modifications.ipynb  4_test_bases.ipynb
examples_old/analysis/: bpparams.ipynb
examples_old/biomolsim/: 1bna.ipynb  analysis.ipynb  dna_structure.ipynb  make_mutant.ipynb
examples_old/demo/: demo copy.ipynb  sequence2pdb.ipynb
examples_old/equilibrate/: test.ipynb
examples_old/extend/: test.ipynb
examples_old/non_canonical/: StructureEditor.py  baseflip.py  recipe_for_2AP.ipynb  recipe_for_HG.ipynb
explanation/: index.html
index-api/: index.html
index-modules/: index.html
index-notebooks/: index-notebooks.md  index.html
index-tutorials/: index.html
main/: README.md  __init__.py  generators.py  geometry.py  pyproject.toml  spline.py  utils.py
main/pymdna.egg-info/: PKG-INFO  SOURCES.txt
mdna/: __init__.py  analysis.py  build.py  generators.py  geometry.py  minimizer.py  modify.py  nucleic.py  spline.py  utils.py
modules/: index.html
modules-modify/: index.html
pymdna/: __init__.py  analysis.py  build.py  build_old.py  generators.py  geometry.py  modifications.py  modify.py  nucleic.py  spline.py  utils.py
pymdna.egg-info/: SOURCES.txt  top_level.txt
reference/: index.html
search/: search_index.json
shapes-reference/: index.html
site/: 404.html  index.html  index.md  objects.inv
stylesheets/: extra.css
tests/: test_abc.py
tutorials-introduction/: index.html
tutorials-modify/: index.html
(+340 files in other folders)
