[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdna"
version = "0.0.1"
description = "Software module for DNA structure analysis and generation"
readme = "README.md"
authors = [{ name = "Thor van Heesch", email = "t.vanheesch@uva.nl" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Molecular Dynamics", 
      "Structure Analysis", 
      "Structuer Generation Tool",
      "Molecular Toolkit",]
 
dependencies = ["mdtraj","numpy","scipy","matplotlib","biopython","numba"]
 
requires-python = ">=3.10"


[project.urls]
Homepage = "https://github.com/heezch/mdna"
 
[tool.setuptools]
packages = ["mdna"]
package-dir = {"" = "mdna"}
py-modules = ["__init__"] # dash, not underscore


[tool.pytest.ini_options]
testpaths = ["tests"]
