[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymdna"
version = "0.1.0"
description = "A Python package for DNA modeling and analysis."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/yourusername/pymdna"
documentation = "https://pymdna.readthedocs.io"

[project.scripts]
# You can define console scripts here if you have any executables.
